[package]
name = "linkedhashmap"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"

[dev-dependencies]
criterion = "0.3"
hashlink = "0.5"
linked-hash-map = "0.5"

[[bench]]
name = "lru"
harness = false
